- added more bugfixes for Delphi XE and 2010 (again thanks to Andreas)

--- a/Packages/Delphi2010/DSharp.Core.dproj
+++ b/Packages/Delphi2010/DSharp.Core.dproj
@@ -77,6 +77,8 @@
 			<DCCReference Include="..\..\Source\Core\DSharp.Core.Validations.pas"/>
 			<DCCReference Include="..\..\Source\Core\DSharp.Core.Variants.pas"/>
 			<DCCReference Include="..\..\Source\Logging\DSharp.Logging.pas"/>
+			<DCCReference Include="..\..\Source\Core\ObjAutoPatch.pas"/>
+			<DCCReference Include="..\..\Source\Core\PatchUtils.pas"/>
 			<BuildConfiguration Include="Base">
 				<Key>Base</Key>
 			</BuildConfiguration>
