--- a/Packages/DelphiXE/DSharp.Core.dproj
+++ b/Packages/DelphiXE/DSharp.Core.dproj
@@ -76,6 +76,8 @@
 			<DCCReference Include="..\..\Source\Core\DSharp.Core.Validations.pas"/>
 			<DCCReference Include="..\..\Source\Core\DSharp.Core.Variants.pas"/>
 			<DCCReference Include="..\..\Source\Logging\DSharp.Logging.pas"/>
+			<DCCReference Include="..\..\Source\Core\ObjAutoPatch.pas"/>
+			<DCCReference Include="..\..\Source\Core\PatchUtils.pas"/>
 			<BuildConfiguration Include="Release">
 				<Key>Cfg_2</Key>
 				<CfgParent>Base</CfgParent>
