- added Logging over AOP to the Mock example

--- a/Samples/UnitTesting/MockDemo.dproj
+++ b/Samples/UnitTesting/MockDemo.dproj
@@ -24,7 +24,7 @@
 			<Base>true</Base>
 		</PropertyGroup>
 		<PropertyGroup Condition="'$(Base)'!=''">
-			<DCC_UnitSearchPath>..\..\Source\Collections;..\..\Source\Core;..\..\Source\Testing;$(DCC_UnitSearchPath)</DCC_UnitSearchPath>
+			<DCC_UnitSearchPath>..\..\Source\Aspects;..\..\Source\Collections;..\..\Source\Core;..\..\Source\Logging;..\..\Source\Testing;$(DCC_UnitSearchPath)</DCC_UnitSearchPath>
 			<DCC_DcuOutput>.\$(Config)\$(Platform)</DCC_DcuOutput>
 			<DCC_ExeOutput>.\$(Config)\$(Platform)</DCC_ExeOutput>
 			<DCC_E>false</DCC_E>
