--- a/Packages/DelphiXE/DSharp.Core.dproj
+++ b/Packages/DelphiXE/DSharp.Core.dproj
@@ -62,11 +62,15 @@
 			<DCCReference Include="..\..\Source\Core\DSharp.Core.DataConversion.Default.pas"/>
 			<DCCReference Include="..\..\Source\Core\DSharp.Core.DataTemplates.pas"/>
 			<DCCReference Include="..\..\Source\Core\DSharp.Core.DataTemplates.Default.pas"/>
+			<DCCReference Include="..\..\Source\Core\DSharp.Core.DependencyProperty.pas"/>
+			<DCCReference Include="..\..\Source\Core\DSharp.Core.Detour.pas"/>
 			<DCCReference Include="..\..\Source\Core\DSharp.Core.Dynamics.pas"/>
 			<DCCReference Include="..\..\Source\Core\DSharp.Core.Editable.pas"/>
+			<DCCReference Include="..\..\Source\Core\DSharp.Core.EventArgs.pas"/>
 			<DCCReference Include="..\..\Source\Core\DSharp.Core.Events.pas"/>
 			<DCCReference Include="..\..\Source\Core\DSharp.Core.Expressions.pas"/>
 			<DCCReference Include="..\..\Source\Core\DSharp.Core.Fibers.pas"/>
+			<DCCReference Include="..\..\Source\Core\DSharp.Core.Framework.pas"/>
 			<DCCReference Include="..\..\Source\Core\DSharp.Core.Generics.pas"/>
 			<DCCReference Include="..\..\Source\Core\DSharp.Core.Lambda.pas"/>
 			<DCCReference Include="..\..\Source\Core\DSharp.Core.Lazy.pas"/>
