--- a/Packages/DelphiXE/DSharp.Core.dproj
+++ b/Packages/DelphiXE/DSharp.Core.dproj
@@ -69,6 +69,7 @@
 			<DCCReference Include="..\..\Source\Core\DSharp.Core.EventArgs.pas"/>
 			<DCCReference Include="..\..\Source\Core\DSharp.Core.Events.pas"/>
 			<DCCReference Include="..\..\Source\Core\DSharp.Core.Expressions.pas"/>
+			<DCCReference Include="..\..\Source\Core\DSharp.Core.Extensions.pas"/>
 			<DCCReference Include="..\..\Source\Core\DSharp.Core.Fibers.pas"/>
 			<DCCReference Include="..\..\Source\Core\DSharp.Core.Framework.pas"/>
 			<DCCReference Include="..\..\Source\Core\DSharp.Core.Generics.pas"/>
