--- a/Packages/Delphi2010/DSharp.Core.dproj
+++ b/Packages/Delphi2010/DSharp.Core.dproj
@@ -77,6 +77,7 @@
 			<DCCReference Include="..\..\Source\Core\DSharp.Core.Generics.pas"/>
 			<DCCReference Include="..\..\Source\Core\DSharp.Core.Lazy.pas"/>
 			<DCCReference Include="..\..\Source\Core\DSharp.Core.NotificationHandler.pas"/>
+			<DCCReference Include="..\..\Source\Core\DSharp.Core.Nullable.pas"/>
 			<DCCReference Include="..\..\Source\Core\DSharp.Core.Properties.pas"/>
 			<DCCReference Include="..\..\Source\Core\DSharp.Core.Reflection.pas"/>
 			<DCCReference Include="..\..\Source\Core\DSharp.Core.Threading.pas"/>
