- refactorings for upcoming interception feature

--- a/Packages/DelphiXE3/DSharp.Core.dproj
+++ b/Packages/DelphiXE3/DSharp.Core.dproj
@@ -167,6 +167,7 @@
         <DCCReference Include="..\..\Source\Core\DSharp.Core.Framework.pas"/>
         <DCCReference Include="..\..\Source\Core\DSharp.Core.Generics.pas"/>
         <DCCReference Include="..\..\Source\Core\DSharp.Core.Lazy.pas"/>
+        <DCCReference Include="..\..\Source\Core\DSharp.Core.MethodIntercept.pas"/>
         <DCCReference Include="..\..\Source\Core\DSharp.Core.NotificationHandler.pas"/>
         <DCCReference Include="..\..\Source\Core\DSharp.Core.Nullable.pas"/>
         <DCCReference Include="..\..\Source\Core\DSharp.Core.Properties.pas"/>
@@ -176,6 +177,7 @@
         <DCCReference Include="..\..\Source\Core\DSharp.Core.Utils.pas"/>
         <DCCReference Include="..\..\Source\Core\DSharp.Core.Validations.pas"/>
         <DCCReference Include="..\..\Source\Core\DSharp.Core.Variants.pas"/>
+        <DCCReference Include="..\..\Source\Core\DSharp.Core.VirtualClass.pas"/>
         <DCCReference Include="..\..\Source\Core\DSharp.Core.VirtualInterface.pas"/>
         <DCCReference Include="..\..\Source\Logging\DSharp.Logging.pas"/>
         <BuildConfiguration Include="Release">
