--- a/Packages/DelphiXE/DSharp.Core.dproj
+++ b/Packages/DelphiXE/DSharp.Core.dproj
@@ -77,6 +77,7 @@
 			<DCCReference Include="..\..\Source\Core\DSharp.Core.Generics.pas"/>
 			<DCCReference Include="..\..\Source\Core\DSharp.Core.Lambda.pas"/>
 			<DCCReference Include="..\..\Source\Core\DSharp.Core.Lazy.pas"/>
+			<DCCReference Include="..\..\Source\Core\DSharp.Core.MethodIntercept.pas"/>
 			<DCCReference Include="..\..\Source\Core\DSharp.Core.NotificationHandler.pas"/>
 			<DCCReference Include="..\..\Source\Core\DSharp.Core.Nullable.pas"/>
 			<DCCReference Include="..\..\Source\Core\DSharp.Core.Properties.pas"/>
@@ -86,6 +87,7 @@
 			<DCCReference Include="..\..\Source\Core\DSharp.Core.Utils.pas"/>
 			<DCCReference Include="..\..\Source\Core\DSharp.Core.Validations.pas"/>
 			<DCCReference Include="..\..\Source\Core\DSharp.Core.Variants.pas"/>
+			<DCCReference Include="..\..\Source\Core\DSharp.Core.VirtualClass.pas"/>
 			<DCCReference Include="..\..\Source\Core\DSharp.Core.VirtualInterface.pas"/>
 			<DCCReference Include="..\..\Source\Logging\DSharp.Logging.pas"/>
 			<DCCReference Include="..\..\Source\Core\ObjAutoPatch.pas"/>
@@ -103,8 +105,8 @@
 				<CfgParent>Base</CfgParent>
 			</BuildConfiguration>
 		</ItemGroup>
-		<Import Condition="Exists('$(BDS)\Bin\CodeGear.Delphi.Targets')" Project="$(BDS)\Bin\CodeGear.Delphi.Targets"/>
-		<Import Condition="Exists('$(APPDATA)\Embarcadero\$(BDSAPPDATABASEDIR)\$(PRODUCTVERSION)\UserTools.proj')" Project="$(APPDATA)\Embarcadero\$(BDSAPPDATABASEDIR)\$(PRODUCTVERSION)\UserTools.proj"/>
+		<Import Project="$(BDS)\Bin\CodeGear.Delphi.Targets" Condition="Exists('$(BDS)\Bin\CodeGear.Delphi.Targets')"/>
+		<Import Project="$(APPDATA)\Embarcadero\$(BDSAPPDATABASEDIR)\$(PRODUCTVERSION)\UserTools.proj" Condition="Exists('$(APPDATA)\Embarcadero\$(BDSAPPDATABASEDIR)\$(PRODUCTVERSION)\UserTools.proj')"/>
 		<ProjectExtensions>
 			<Borland.Personality>Delphi.Personality.12</Borland.Personality>
 			<Borland.ProjectType>Package</Borland.ProjectType>
