Refactored execution contexts

--- a/Packages/DelphiXE5/DSharp.PresentationModel.dproj
+++ b/Packages/DelphiXE5/DSharp.PresentationModel.dproj
@@ -224,6 +224,9 @@
         <DCCReference Include="..\..\Source\PresentationModel\DSharp.PresentationModel.ResultBase.pas"/>
         <DCCReference Include="..\..\Source\PresentationModel\DSharp.PresentationModel.ParentIntf.pas"/>
         <DCCReference Include="..\..\Source\PresentationModel\DSharp.PresentationModel.HaveActiveItemIntf.pas"/>
+        <DCCReference Include="..\..\Source\PresentationModel\DSharp.PresentationModel.CoroutineExecutionContext.pas"/>
+        <DCCReference Include="..\..\Source\PresentationModel\DSharp.PresentationModel.ActionExecutionContextIntf.pas"/>
+        <DCCReference Include="..\..\Source\PresentationModel\DSharp.PresentationModel.CoroutineExecutionContextIntf.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
