Moved type IWindowManager to unit DSharp.PresentationModel.WindowManagerIntf.pas

--- a/Packages/DelphiXE5/DSharp.PresentationModel.dproj
+++ b/Packages/DelphiXE5/DSharp.PresentationModel.dproj
@@ -227,6 +227,7 @@
         <DCCReference Include="..\..\Source\PresentationModel\DSharp.PresentationModel.CoroutineExecutionContext.pas"/>
         <DCCReference Include="..\..\Source\PresentationModel\DSharp.PresentationModel.ActionExecutionContextIntf.pas"/>
         <DCCReference Include="..\..\Source\PresentationModel\DSharp.PresentationModel.CoroutineExecutionContextIntf.pas"/>
+        <DCCReference Include="..\..\Source\PresentationModel\DSharp.PresentationModel.WindowManagerIntf.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
